home page html and css

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../src/assets/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="../src/index.js" defer></script>
 </head>
 <body>
+    <section class="home">
+        <figure>
+        <img src="../src/assets/images/zero.svg" alt="super employee">
+        </figure>
+        <article class="titles">
+        <h1 class="title1">Welcome!</h1>
+        <h2 class="title2">Thanks for participating in the pool</h2>
+        <button class="next-button">Let's go</button>
+        </article>
+    </section>
     
 </body>
 </html>
