--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Survey</title>
     <link rel="stylesheet" href="../src/assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,9 @@
         <article class="titles">
         <h1 class="title1">Welcome!</h1>
         <h2 class="title2">Thanks for participating in the pool</h2>
-        <button class="next-button">Let's go</button>
+        <button class="next-button" onmousemove="changeButtonText('Just Go Ahead')" onmouseout="changeButtonText(`Let's go!`)" >
+            Let's Go
+        </button>
         </article>
     </section>
     
