page 3 select box added

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,7 +15,7 @@
         <figure>
         <img src="../assets/images/super-dev.svg" alt="super developer with cape and everything">
         </figure>
-        <article class="titles">
+        <article class="forms">
             <h1 class="title1">Welcome!</h1>
             <h2 class="title2">Thanks for participating in the pool</h2>
 
