--- a/src/pages/page2.html
+++ b/src/pages/page2.html
@@ -15,7 +15,7 @@
         <figure>
             <img src="../assets/images/super-dev-2.svg" alt="">
         </figure>
-        <article>
+        <article class="forms">
             <h1 class="subtitle">Necessities of working in financial markets </h1>
             <p>This research is to find the reasons for the failure of people in financial markets. The results of this survey will be emailed to you along with the analysis of our experienced experts.</p>
 
