--- a/src/pages/page3.html
+++ b/src/pages/page3.html
@@ -23,17 +23,38 @@
                <!-- <img src="../assets/images/arrow-bottom.svg" alt="" srcset=""> -->
                 <select name="status" id="accstat" required>
                    
-                    <option value="1">  I have not created an account yet.</option>
+                    <option value="1">I have not created an account yet.</option>
                     <option value="2">I have an old account but it's unused.</option>
                     <option value="3">I am a novice user on this platform.</option>
-                    <option value="4">I am a vetean user here.</option>
+                    <option value="4">I am a veteran user here.</option>
                 </select>
                 <div class="dd-arrow" > </div>
             </div>
             
-                <h2 class="title2">In which financial markets do you operate?</h2>
+            <h2 class="title2">In which financial markets do you operate?</h2>
 
-                <input type="radio" name="market">
+            <section class="marketSelect">
+                <div class="radio-wrap">
+                    <input type="radio" name="market" id="stock_market">
+                    <label for="stock_market">Stock Market</label>
+                </div>
+                <div class="radio-wrap">
+                    <input type="radio" name="market" id="foreign_exchange">
+                    <label for="foreign_exchange">Foreign Exchange</label>
+                </div>
+                <div class="radio-wrap">
+                    <input type="radio" name="market" id="commodity">
+                    <label for="commodity">Commodity</label>
+                </div>
+                <div class="radio-wrap">
+                    <input type="radio" name="market" id="bond_market">
+                    <label for="bond_market">Bond Market</label>
+                </div>
+                <div class="radio-wrap">
+                    <input type="radio" name="market" id="cryptocurrency_market"> 
+                    <label for="cryptocurrency_market">Cryptocurrency Market</label>
+                </div>
+            </section>
         </article>
 
     </section>
