--- a/src/pages/page3.html
+++ b/src/pages/page3.html
@@ -55,8 +55,16 @@
                     <label for="cryptocurrency_market">Cryptocurrency Market</label>
                 </div>
             </section>
-        </article>
+            <a href="page2.html">
+                <button class="next-button">Back</button></a>
 
+            <a href="page4.html">
+                <button class="next-button">Next</button></a>
+
+            <a href="page4.html">
+                <button class="next-button skip-button">Skip</button></a>
+        </article>
+       
     </section>
     
 </body>
