partial button script logic

--- a/src/pages/page5.html
+++ b/src/pages/page5.html
@@ -24,7 +24,7 @@
             <textarea name="investment-history" id="investment-history" cols="30" rows="10" placeholder="Write your previous experiences with investments here"></textarea>
 
             <a href="page3.html">
-                <button class="next-button">Back</button></a>
+                <button class="next-button" formnovalidate>Back</button></a>
 
             <a href="page6.html" onsubmit="validadeForm()">
                 <button type="submit" class="next-button">Next</button></a>
