--- a/src/pages/page6.html
+++ b/src/pages/page6.html
@@ -24,8 +24,8 @@
                 <label for="email" class="inputBoxLabel">Email: </label>
                 <input type="email" id="email" class="inputBox" required>
 
-                <label for="age" class="inputBoxLabel">Full Name: </label>
-                <input type="number" id="age" class="inputBox" required>
+                <label for="age" class="inputBoxLabel">Age: </label>
+                <input type="number" id="age" class="inputBox ageInput" required>
 
                 <button class="next-button skip-button" id="back-button" formnovalidate onclick="backButton()">Back</button>
 
