added button logic

--- a/src/pages/page4.html
+++ b/src/pages/page4.html
@@ -52,12 +52,12 @@
                     </div>
                 </section>
                 <a href="page3.html">
-                <button class="next-button" formnovalidate onclick="backButton()">Back</button></a>
+                <button class="next-button" formnovalidate onclick="pageSwitch(3)">Back</button></a>
 
                 <button type="submit" class="next-button">Next</button>
 
         
-                <button class="next-button skip-button" id="skip-button" formnovalidate onclick="skipButton()">Skip</button>
+                <button class="next-button skip-button" id="skip-button" formnovalidate onclick="pageSwitch(5)">Skip</button>
         </article>
     </section>
 </body>
