--- a/src/pages/page5.html
+++ b/src/pages/page5.html
@@ -22,11 +22,11 @@
 
             <textarea name="investment-history" id="investment-history" cols="30" rows="10" placeholder="    Write your previous experiences with investments here" required></textarea>
 
-                <button class="next-button" formnovalidate onclick="backButton()">Back</button>
+                <button class="next-button" formnovalidate onclick="pageSwitch(4)">Back</button>
 
                 <button type="submit" class="next-button">Next</button>
 
-                <button class="next-button skip-button" id="skip-button" formnovalidate onclick="skipButton()">Skip</button>
+                <button class="next-button skip-button" id="skip-button" formnovalidate onclick="pageSwitch(6)">Skip</button>
 
             </form>
         </article>
