added responsivity to index.html

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -20,7 +20,7 @@
             <h2 class="title2">Thanks for participating in the pool</h2>
 
         <a href="page2.html">
-            <button class="next-button" onmousemove="changeButtonText('Just Go Ahead')" onmouseout="changeButtonText(`Let's go!`)"  >
+            <button class="next-button skip-button" onmousemove="changeButtonText('Just Go Ahead')" onmouseout="changeButtonText(`Let's go!`)"  >
             Let's Go
             </button>
         </a>
