--- a/src/pages/page6.html
+++ b/src/pages/page6.html
@@ -27,7 +27,7 @@
                 <label for="age" class="inputBoxLabel">Age: </label>
                 <input type="number" id="age" class="inputBox ageInput" required>
 
-                <button class="next-button skip-button" id="back-button" formnovalidate onclick="pageSwitch(5)">Back</button>
+                <button class="next-button skip-button" id="back-button" formnovalidate onclick="backButton(5)">Back</button>
 
                 <button type="submit" class="next-button skip-button" id="skip-button">Submit</button>
             </form>
