--- a/src/pages/page4.html
+++ b/src/pages/page4.html
@@ -23,9 +23,9 @@
                     <select form="form-page2" name="status" id="accstat" class="selectForm" required>
                     
                         <option value="1">I have not invested yet.</option>
-                        <option value="2">I prefer investing small ammounts of money with quick return.</option>
+                        <option value="2">I prefer investing with quick return.</option>
                         <option value="3">I like to invest in the stock market.</option>
-                        <option value="4">I have multiple investments in various areas.</option>
+                        <option value="4">I have multiple investments.</option>
                     </select>
                     <div class="dd-arrow" > </div>
                 </div>
@@ -52,12 +52,12 @@
                     </div>
                 </section>
                 <a href="page3.html">
-                <button class="next-button" formnovalidate onclick="pageSwitch(3)">Back</button></a>
+                <button class="next-button" formnovalidate onclick="backButton(3)">Back</button></a>
 
                 <button type="submit" class="next-button">Next</button>
 
         
-                <button class="next-button skip-button" id="skip-button" formnovalidate onclick="pageSwitch(5)">Skip</button>
+                <button class="next-button skip-button" id="skip-button" formnovalidate onclick="skipButton(5)">Skip</button>
         </article>
     </section>
 </body>
