--- a/src/pages/page5.html
+++ b/src/pages/page5.html
@@ -20,7 +20,10 @@
             <form action="page6.html">
             <h2 class="title2">If you or someone close to you has already made a loss on the investment, write down the details</h2>
 
-            <textarea name="investment-history" id="investment-history" cols="30" rows="10" placeholder="    Write your previous experiences with investments here" maxlength="130" required></textarea>
+            <textarea name="investment-history" id="investment-history" cols="30" rows="10" placeholder="    Write your previous experiences with investments here" maxlength="130"></textarea>
+
+                <p class="counterText">Caracters remaining: <span class="charCounter">130</span></p>
+                
 
                 <button class="next-button" formnovalidate onclick="backButton(4)">Back</button>
 
