another fix for the buttons logic

--- a/src/pages/page5.html
+++ b/src/pages/page5.html
@@ -25,7 +25,7 @@
                 <p class="counterText">Caracters remaining: <span class="charCounter">130</span></p>
                 
 
-                <button class="next-button" formnovalidate onclick="backButton(4)">Back</button>
+                <button class="next-button back-button" formnovalidate onclick="backButton(4)">Back</button>
 
                 <button type="submit" class="next-button">Next</button>
 
