--- a/src/pages/page2.html
+++ b/src/pages/page2.html
@@ -20,7 +20,7 @@
             <p>This research is to find the reasons for the failure of people in financial markets. The results of this survey will be emailed to you along with the analysis of our experienced experts.</p>
 
             <a href="index.html">
-                <button class="next-button">Back to Home</button></a>
+                <button class="next-button skip-button">Back to Home</button></a>
 
             <a href="page3.html">
                 <button class="next-button">Fill out the Form</button></a>
